--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -36,9 +36,11 @@
                         <input class="mdui-textfield-input" id="msg"/>
                     </div>
                     <div class="mdui-container" style="padding:20px 35px">
-                        <!-- TODO: add a send button to send message -->
                         <button class="mdui-btn mdui-color-theme mdui-ripple"
-                                onclick="clearMsg()">Clear
+                                onclick="sendMsgToServer()">SEND
+                        </button>
+                        <button class="mdui-btn mdui-color-theme mdui-ripple"
+                                onclick="clearMsg()">CLEAR
                         </button>
                     </div>
                 </div>
@@ -54,10 +56,9 @@
                 <div class="mdui-chip">
                     <span class="mdui-chip-icon mdui-color-blue">
                         <i class="mdui-icon material-icons">face</i></span>
-                    <span class="mdui-chip-title">Online Users</span>
-                    <!-- TODO: check online number num -->
+                    <span class="mdui-chip-title">Online Users (<span class="chat-num"></span>)</span>
                 </div>
-                <!-- TODO: add a message container -->
+                <div class="message-container"></div>
             </div>
 
         </div>
@@ -96,7 +97,7 @@
                 $messageContainer.append(
                     '<div class="mdui-card" style="margin: 10px 0;">' +
                     '<div class="mdui-card-primary">' +
-                    '<div class="mdui-card-content message-content">' + message.username + "：" + message.msg + '</div>' +
+                    '<div class="mdui-card-content message-content">' + message.username + "：" + message.message + '</div>' +
                     '</div></div>');
             }
             $('.chat-num').text(message.onlineCount);
